--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
                     </div>
                 </div>
             </div>
-            <div class="formBx">
+            <div name="contact" method="POST" data-netlify="true" class="formBx">
                 <form action="">
                     <h3 class="lang" key="title35">Message Me</h3>
-                    <input type="text"  placeholder="Full Name" class="lang" key="title36">
-                    <input type="email" name="" id="" placeholder="Email">
-                    <textarea name="" id=""  placeholder="Your Message"></textarea>
+                    <input name="name" type="text"  placeholder="Full Name" class="lang" key="title36">
+                    <input name="email" type="email" name="" id="" placeholder="Email">
+                    <textarea name="email" name="" id=""  placeholder="Your Message"></textarea>
                     <input type="submit" value="send">
                 </form>
             </div>
