--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <h3 class="lang" key="title35">Message Me</h3>
                     <input name="name" type="text"  placeholder="Full Name" class="lang" key="title36">
                     <input name="email" type="email" name="" id="" placeholder="Email">
-                    <textarea name="email" name="" id=""  placeholder="Your Message"></textarea>
+                    <textarea  name="message" id=""  placeholder="Your Message"></textarea>
                     <input type="submit" value="send">
                 </form>
             </div>
