--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
     </section>
     <section class="contact scroll-heading" id="contact">
         <div class="heading white">
-            <h2 class="lang" key="title29">Contact Us</h2>
-            <p class="lang" key="title30">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <h2 class="lang" key="title29">Contact Information</h2>
+            <p class="lang" key="title30"> </p>
         </div>
         <div class="content">
             <div class="contactInfo">
@@ -166,21 +166,21 @@
                         </div>
                     <div class="text">
                         <h3 class="lang" key="title32">Address</h3>
-                        <p>a46 Sugar Camp Road,<br>Owatona,Minnesota,<br>5506</p>
+                        <p>Recidencial Don Bosco,<br>Calle a Villa Chentilla<br>5506</p>
                     </div>
                     </div>
                     <div class="box">
                         <div class="icon"><i class="fas fa-phone-alt"></i></div>
                     <div class="text">
                         <h3 class="lang" key="title33">Phome</h3>
-                        <p>507-475-6094</p>
+                        <p>7541-6874</p>
                     </div>
                     </div>
                     <div class="box">
                         <div class="icon"><i class="far fa-envelope"></i></div>
                     <div class="text">
                         <h3 class="lang" key="title34">Email</h3>
-                        <p>wrub7d78i0e@temporary-mail.net</p>
+                        <p>estefaniaore19@gmail.com</p>
                     </div>
                     </div>
                 </div>
