--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul  class="menu">
             <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
-            <li><a  class="lang" key="about" href="#about" onclick="toggleMenu();">About me</a></li>    
-            <li><a class="lang" key="services" href="#services" onclick="toggleMenu();" >Services</a></li> 
-            <li><a class="lang" key="Works" href="#work" onclick="toggleMenu();">Works</a></li> 
-            <li><a class="lang" key="testimonial" href="#testimonial" onclick="toggleMenu();">Testimonials</a></li> 
+            <li><a  class="lang" key="about" href="#about me" onclick="toggleMenu();">About me</a></li>    
+            <li><a class="lang" key="services" href="#Case of success" onclick="toggleMenu();" >Services</a></li> 
+            <li><a class="lang" key="Works" href="#Interests/Publications" onclick="toggleMenu();">Works</a></li> 
             <li><a class="lang" key="contact" href="#contact" onclick="toggleMenu();">Contact</a></li>
             <ul class="lang-menu">
                 <li><a  href="#" class="selected-lang lang" key="Languages">Languages</a>
