--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <a href="#" class="logo">Melissa Orellana</a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul  class="menu">
-            <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
-            <li><a  class="lang" key="about" href="#Project" onclick="toggleMenu();">About me</a></li>     
-            <li><a class="lang" key="contact" href="#contact" onclick="toggleMenu();">Contact</a></li>
+            <li><a class="lang" key="Home" href="#Home" onclick="toggleMenu();">Home</a></li> 
+            <li><a  class="lang" key="Project" href="#Project" onclick="toggleMenu();">About me</a></li>     
+            <li><a class="lang" key="ontact" href="#Contact" onclick="toggleMenu();">Contact</a></li>
             <ul class="lang-menu">
                 <li><a  href="#" class="selected-lang lang" key="Languages">Languages</a>
                     <ul>
