--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <a href="#" class="logo">Melissa Orellana</a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul  class="menu">
-            <li><a class="lang" key="Home" href="#Home" onclick="toggleMenu();">Home</a></li> 
-            <li><a  class="lang" key="Project" href="#Project" onclick="toggleMenu();">About me</a></li>     
-            <li><a class="lang" key="ontact" href="#Contact" onclick="toggleMenu();">Contact</a></li>
+            <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
+            <li><a  class="lang" key="project" href="#Project" onclick="toggleMenu();">Project</a></li>     
+            <li><a class="lang" key="contact" href="#contact" onclick="toggleMenu();">Contact</a></li>
             <ul class="lang-menu">
                 <li><a  href="#" class="selected-lang lang" key="Languages">Languages</a>
                     <ul>
@@ -38,72 +38,7 @@
             
         </div>
     </section>
-    <section class="about" id="about">
-        <div class="heading scroll-heading">
-            <h2 class="lang" key="title3">About Me</h2>
-        </div>
-        <div class="content">
-            <div class="contentBx w50 scroll-contentBx">
-                <h3 class="lang" key="title4">I'm a Front End Web Develover.</h3>
-                <p class="lang" key="title5"> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                     Eaque nulla nam similique mollitia. Facere fugit voluptas 
-                     debitis numquam in, labore fugiat officia vero totam qui perspiciatis
-                      harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                      Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, 
-                      adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. 
-                      Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit 
-                      earum incidunt accusamus, perferendis quas iusto.</p>
-            </div>
-            <div class="w50 scroll-img">
-                <img src="./img/foto.jfif" class="img">
-            </div>
-        </div>
-    </section>
-    <section class="services scroll-services" id="services">
-        <div class="heading white">
-            <h2 class="lang" key="title6">Our Services</h2>
-            <p class="lang" key="title7">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="content">
-            <div class="servicesBx">
-                <img src="./img/icon1.png" alt="">
-                <h2 class="lang" key="title8">Web Disign</h2>
-                <p class="lang" key="title9">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-            </div>
-            <div class="servicesBx">
-                <img src="./img/icon2.png" alt="">
-                <h2 class="lang" key="title10">Web Development</h2>
-                <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-            </div>
-            <div class="servicesBx">
-                <img src="./img/icon3.png" alt="">
-                <h2 class="lang" key="title12">Android App</h2>
-                <p class="lang" key="title13">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste.</p>
-            </div>
-            <div class="servicesBx">
-                <img src="./img/icon4.png" alt="">
-                <h2 class="lang" key="title14">Photography</h2>
-                <p class="lang" key="title15">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-            </div>
-            <div class="servicesBx">
-                <img src="./img/icon5.png" alt="">
-                <h2 class="lang" key="title16">Content Writing</h2>
-                <p class="lang" key="title17">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste.</p>
-            </div>
-            <div class="servicesBx">
-                <img src="./img/icon6.png" alt="">
-                <h2 class="lang" key="title18">Video Editing</h2>
-                <p class="lang" key="title19">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-            </div>
-        </div>
-    </section>
-    <section class="work scroll-work" id="work">
+    <section class="work scroll-work" id="Project">
         <div class="heading ">
             <h2 class="lang" key="title20">Our Latest Work</h2>
             <p class="lang" key="title21">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -125,28 +60,6 @@
         <div class="heading">
             <a href="#" class="btn lang"  key="title22" >View More</a>
          </div>
-    </section>
-    <section class="testimonial scroll-testimonial" id="testimonial">
-        <div class="heading">
-            <h2 class="lang" key="title23">Testimonial</h2>
-            <p class="lang" key="title24"> Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-        <div class="content">
-            <div class="testimonialBx">
-                <p class="lang" key="title25">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,
-                     cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.
-                      Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor 
-                      modi perspiciatis!</p>
-                      <h3 class="lang" key="title26">Someone Famous <br><span>Creative Disigner</span></h3>
-            </div>
-            <div class="testimonialBx">
-                <p class="lang" key="title28">Lorem ipsum, dolor sit amet consectetur adipisicing elit. A,
-                     cupiditate omnis ducimus et sit quis perspiciatis quas laudantium.
-                      Unde, a id dignissimos repudiandae sapiente quis eaque quisquam dolor 
-                      modi perspiciatis!</p>
-                      <h3 class="lang" key="title26">Someone Famous <br><span>Creative Disigner</span></h3>
-            </div>
-        </div>
     </section>
     <section class="contact scroll-heading" id="contact">
         <div class="heading white">
