--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
             <li><a  class="lang" key="about" href="#about" onclick="toggleMenu();">About</a></li>     
             <li><a  class="lang" key="project" href="#Project" onclick="toggleMenu();">Project</a></li> 
+            <li><a  class="lang" key="publications" href="#publications" onclick="toggleMenu();">publications</a></li> 
             <li><a class="lang" key="contact" href="#contact" onclick="toggleMenu();">Contact</a></li>
             <ul class="lang-menu">
                 <li><a  href="#" class="selected-lang lang" key="Languages">Languages</a>
@@ -60,6 +61,50 @@
             </div>
         </div>
     </section>
+    <section class="services scroll-services" id="publications">
+        <div class="heading white">
+            <h2 class="lang" key="title6">Our Services</h2>
+            <p class="lang" key="title7">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="content">
+            <div class="servicesBx">
+                <img src="./img/icon1.png" alt="">
+                <h2 class="lang" key="title8">Web Disign</h2>
+                <p class="lang" key="title9">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste. </p>
+            </div>
+            <div class="servicesBx">
+                <img src="./img/icon2.png" alt="">
+                <h2 class="lang" key="title10">Web Development</h2>
+                <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste. </p>
+            </div>
+            <div class="servicesBx">
+                <img src="./img/icon3.png" alt="">
+                <h2 class="lang" key="title12">Android App</h2>
+                <p class="lang" key="title13">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste.</p>
+            </div>
+            <div class="servicesBx">
+                <img src="./img/icon4.png" alt="">
+                <h2 class="lang" key="title14">Photography</h2>
+                <p class="lang" key="title15">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste. </p>
+            </div>
+            <div class="servicesBx">
+                <img src="./img/icon5.png" alt="">
+                <h2 class="lang" key="title16">Content Writing</h2>
+                <p class="lang" key="title17">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste.</p>
+            </div>
+            <div class="servicesBx">
+                <img src="./img/icon6.png" alt="">
+                <h2 class="lang" key="title18">Video Editing</h2>
+                <p class="lang" key="title19">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Quaerat dolores inventore vitae atque natus quam iste. </p>
+            </div>
+        </div>
+    </section>
     <section class="work scroll-work" id="Project">
         <div class="heading ">
             <h2 class="lang" key="title20">Projects</h2>
@@ -87,6 +132,7 @@
          </div>
          -->
     </section>
+    
     <section class="contact scroll-heading" id="contact">
         <div class="heading white">
             <h2 class="lang" key="title29">Contact Information</h2>
