--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="textBx scroll-banner">
             <h2 class="lang" key="title1">Hello, I'm <br><br> MeliOrellana.</h2>
             <h3 class="lang" key="title2">I'm a Front End Web Develover</h3>
-            <a href="./pdf/GUIA DE TRABAJO CREANDO MI PORTAFOLIO PROFESIONAL.pdf" class="btn lang" key="Download" download="CV.pdf">Download CV</a>  <!--La probieda de target="_blank" es para abrir en una pestaña nueva-->
+            <a href="./pdf/Melissa Orellana.pdf" class="btn lang" key="Download" download="CV.pdf">Download CV</a>  <!--La probieda de target="_blank" es para abrir en una pestaña nueva-->
             <a href="https://www.linkedin.com/in/estefan%C3%ADa-orellana-6a3390208/" target="_blank" class="icon"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/mely201" target="_blank" class="icon"><i class="fab fa-github"></i></a>
             
