--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Melissa Orellana</a>
+        <a href="#" class="logo">Epiphany</a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul  class="menu">
             <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
