--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <img src="./img/product2.png" alt="">
             </div>
                 <div class="workBx">
-                    <img src="./img/product3.jpg" alt="">
+                    <img src="./img/product3.png" alt="">
                 </div>
                 <div class="workBx">
-                    <img src="./img/product4.jpg" alt="">
+                    <img src="./img/product4.png" alt="">
                 </div>
         </div>
         <!--
