--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                       earum incidunt accusamus, perferendis quas iusto.</p>
             </div>
             <div class="w50 scroll-img">
-                <img src="./img/foto.jfif" class="img">
+                <img src="./img/foto.jpeg" class="img">
             </div>
         </div>
     </section>
