--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
         <div class="content">
             <div class="workBx">
                 <img src="./img/product1.jpg" alt="">
+                <h2 class="lang" key="title21">Web Development</h2>
+                <p class="lang" key="title22">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </div>
             <div class="workBx">
                 <img src="./img/product2.png" alt="">
