--- a/index.html
+++ b/index.html
@@ -125,12 +125,14 @@
             </div>
                 <div class="workBx">
                     <img src="./img/product3.png" alt="">
+                    <h2 class="lang" key="title25">Web Development</h2>
+                    <p class="lang" key="title28">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </div>
+                <!--
                 <div class="workBx">
                     <img src="./img/product4.png" alt="">
-                </div>
+                </div>  
         </div>
-        <!--
             <div class="heading">
             <a href="#" class="btn lang"  key="title22" >View More</a>
          </div>
