--- a/index.html
+++ b/index.html
@@ -72,12 +72,14 @@
                 <h2 class="lang" key="title8">Web Disign</h2>
                 <p class="lang" key="title9">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Quaerat dolores inventore vitae atque natus quam iste. </p>
+                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more" >more</a>
             </div>
             <div class="servicesBx">
                 <img src="./img/icon2.png" alt="">
                 <h2 class="lang" key="title10">Web Development</h2>
                 <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Quaerat dolores inventore vitae atque natus quam iste. </p>
+                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more">more</a>
             </div>
              <!--
             <div class="servicesBx">
