--- a/index.html
+++ b/index.html
@@ -1,43 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MeliOrellana</title>
+    <title>Meli Orellana</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon.png">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <script src="./js/scrollreveal.js"></script>
 </head>
+
 <body>
     <header>
         <a href="#" class="logo">Epiphany</a>
         <div class="toggle" onclick="toggleMenu();"></div>
-        <ul  class="menu">
-            <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li> 
-            <li><a  class="lang" key="about" href="#about" onclick="toggleMenu();">About</a></li>     
-            <li><a  class="lang" key="project" href="#Project" onclick="toggleMenu();">Project</a></li> 
-            <li><a  class="lang" key="publications" href="#publications" onclick="toggleMenu();">publications</a></li> 
+        <ul class="menu">
+            <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li>
+            <li><a class="lang" key="about" href="#about" onclick="toggleMenu();">About</a></li>
+            <li><a class="lang" key="project" href="#Project" onclick="toggleMenu();">Project</a></li>
+            <li><a class="lang" key="publications" href="#publications" onclick="toggleMenu();">publications</a></li>
             <li><a class="lang" key="contact" href="#contact" onclick="toggleMenu();">Contact</a></li>
             <ul class="lang-menu">
-                <li><a  href="#" class="selected-lang lang" key="Languages">Languages</a>
+                <li><a href="#" class="selected-lang lang" key="Languages">Languages</a>
                     <ul>
-                        <li><a href="#"  class="es translate" id="es">Spanish</a></li>
-                        <li><a href="#" class="en translate" id="en" >English</a></li>
+                        <li><a href="#" class="es translate" id="es">Spanish</a></li>
+                        <li><a href="#" class="en translate" id="en">English</a></li>
                     </ul>
                 </li>
-              </ul>
+            </ul>
         </ul>
     </header>
     <section class="banner" id="home">
         <div class="textBx scroll-banner">
             <h2 class="lang" key="title1">Hello, I'm <br><br> MeliOrellana.</h2>
             <h3 class="lang" key="title2">I'm a Front End Web Develover</h3>
-            <a href="./pdf/Melissa Orellana.pdf" class="btn lang" key="Download" download="CV.pdf">Download CV</a>  <!--La probieda de target="_blank" es para abrir en una pestaña nueva-->
-            <a href="https://www.linkedin.com/in/estefan%C3%ADa-orellana-6a3390208/" target="_blank" class="icon"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/mely201" target="_blank" class="icon"><i class="fab fa-github"></i></a>
-            
+            <a href="./pdf/Melissa Orellana.pdf" class="btn lang" key="Download" download="CV.pdf">Download CV</a>
+            <!--La probieda de target="_blank" es para abrir en una pestaña nueva-->
+            <a title="LinkedIn" href="https://www.linkedin.com/in/estefan%C3%ADa-orellana-6a3390208/" target="_blank"
+                class="icon"><i class="fab fa-linkedin-in"></i></a>
+            <a title="GitHub" href="https://github.com/mely201" target="_blank" class="icon"><i
+                    class="fab fa-github"></i></a>
+
         </div>
     </section>
     <section class="about" id="about">
@@ -48,13 +54,15 @@
             <div class="contentBx w50 scroll-contentBx">
                 <h3 class="lang" key="title4">I'm a Front End Web Develover.</h3>
                 <p class="lang" key="title5"> Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                     Eaque nulla nam similique mollitia. Facere fugit voluptas 
-                     debitis numquam in, labore fugiat officia vero totam qui perspiciatis
-                      harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                      Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur, 
-                      adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi. 
-                      Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit 
-                      earum incidunt accusamus, perferendis quas iusto.</p>
+                    Eaque nulla nam similique mollitia. Facere fugit voluptas
+                    debitis numquam in, labore fugiat officia vero totam qui perspiciatis
+                    harum nam quo nesciunt? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Magni, nostrum inventore cupiditate ullam officiis voluptatum cumque accusantium quas itaque eaque
+                    reiciendis aperiam suscipit quis laboriosam illo explicabo odit reprehenderit debitis.illo explicabo
+                    odit reprehenderit debitis illo explicabo <br><br>Lorem ipsum dolor sit amet consectetur,
+                    adipisicing elit. Dolorem impedit recusandae in perferendis, ipsa eligendi.
+                    Eum magni neque, rem, eaque consequuntur repellendus praesentium reprehenderit
+                    earum incidunt accusamus, perferendis quas iusto.</p>
             </div>
             <div class="w50 scroll-img">
                 <img src="./img/foto.png" class="img">
@@ -70,18 +78,18 @@
             <div class="servicesBx">
                 <img src="./img/icon1.png" alt="">
                 <h2 class="lang" key="title8">Web Disign</h2>
-                <p class="lang" key="title9">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more" >more</a>
+                <p class="lang" key="title9">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quaerat dolores inventore vitae atque natus quam iste. </p>
+                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more"></a>
             </div>
             <div class="servicesBx">
                 <img src="./img/icon2.png" alt="">
                 <h2 class="lang" key="title10">Web Development</h2>
-                <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Quaerat dolores inventore vitae atque natus quam iste. </p>
-                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more">more</a>
+                <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quaerat dolores inventore vitae atque natus quam iste. </p>
+                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more"></a>
             </div>
-             <!--
+            <!--
             <div class="servicesBx">
                 <img src="./img/icon3.png" alt="">
                 <h2 class="lang" key="title12">Android App</h2>
@@ -106,7 +114,7 @@
                 <p class="lang" key="title19">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Quaerat dolores inventore vitae atque natus quam iste. </p>
                 -->
-            </div>
+        </div>
         </div>
     </section>
     <section class="work scroll-work" id="Project">
@@ -118,19 +126,19 @@
             <div class="workBx">
                 <img src="./img/product1.jpg" alt="">
                 <h2 class="lang" key="title21">Web Development</h2>
-                <p class="lang" key="title22">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p class="lang" key="title22">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
             <div class="workBx">
                 <img src="./img/product2.png" alt="">
                 <h2 class="lang" key="title23">Web Development</h2>
                 <p class="lang" key="title24">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
-                <div class="workBx">
-                    <img src="./img/product3.png" alt="">
-                    <h2 class="lang" key="title25">Web Development</h2>
-                    <p class="lang" key="title28">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                </div>
-                <!--
+            <div class="workBx">
+                <img src="./img/product3.png" alt="">
+                <h2 class="lang" key="title25">Web Development</h2>
+                <p class="lang" key="title28">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+            <!--
                 <div class="workBx">
                     <img src="./img/product4.png" alt="">
                 </div>  
@@ -140,7 +148,7 @@
          </div>
          -->
     </section>
-    
+
     <section class="contact scroll-heading" id="contact">
         <div class="heading white">
             <h2 class="lang" key="title29">Contact Information</h2>
@@ -154,33 +162,33 @@
                         <div class="icon">
                             <i class="fas fa-map-marker-alt"></i>
                         </div>
-                    <div class="text">
-                        <h3 class="lang" key="title32">Address</h3>
-                        <p>Recidencial Don Bosco,<br>Calle a Villa Chentilla<br>5506</p>
-                    </div>
+                        <div class="text">
+                            <h3 class="lang" key="title32">Address</h3>
+                            <p>Recidencial Don Bosco,<br>Calle a Villa Chentilla<br>5506</p>
+                        </div>
                     </div>
                     <div class="box">
                         <div class="icon"><i class="fas fa-phone-alt"></i></div>
-                    <div class="text">
-                        <h3 class="lang" key="title33">Phome</h3>
-                        <p>7541-6874</p>
-                    </div>
+                        <div class="text">
+                            <h3 class="lang" key="title33">Phome</h3>
+                            <p>7541-6874</p>
+                        </div>
                     </div>
                     <div class="box">
                         <div class="icon"><i class="far fa-envelope"></i></div>
-                    <div class="text">
-                        <h3 class="lang" key="title34">Email</h3>
-                        <p>estefaniaore19@gmail.com</p>
-                    </div>
+                        <div class="text">
+                            <h3 class="lang" key="title34">Email</h3>
+                            <p>estefaniaore19@gmail.com</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div  class="formBx">
+            <div class="formBx">
                 <form name="contact" method="POST" data-netlify="true" action="">
                     <h3 class="lang" key="title35">Message Me</h3>
-                    <input name="name"  type="text"  placeholder="Full Name" class="lang" key="title36">
+                    <input name="name" type="text" placeholder="Full Name" class="lang" key="title36">
                     <input name="email" type="email" name="" id="" placeholder="Email">
-                    <textarea  name="message" id=""  placeholder="Your Message"></textarea>
+                    <textarea name="message" id="" placeholder="Your Message"></textarea>
                     <input type="submit" value="send">
                 </form>
             </div>
@@ -189,9 +197,10 @@
     <div class="copyright">
         <p>copyright © 2021 Melissa Orellana. All Right Reserved</p>
     </div>
-<script src="./js/app.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="./js/Languages/Languages.js"></script>
-<script src="./js/animations.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/Languages/Languages.js"></script>
+    <script src="./js/animations.js"></script>
 </body>
+
 </html>
