--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo"><img src="./img/logo" height="80px" width="80px"
-                style="background-color: transparent;" /></a>
+        <a href="#" class="logo"><img src="./img/Meli.svg" height="60" width="60" /></a>
         <div class="toggle" onclick="toggleMenu();"></div>
         <ul class="menu">
             <li><a class="lang" key="home" href="#home" onclick="toggleMenu();">Home</a></li>
@@ -87,14 +86,8 @@
                 <img src="./img/icon.svg.png" alt=""> <br>
                 <a href="./pdf/Propuesta ISO.pdf" class="btn lang" target="_blank" key="more"></a>
             </div>
+          
             <!--
-            <div class="servicesBx">
-                <img src="./img/icon2.png" alt="">
-                <h2 class="lang" key="title10">Web Development</h2>
-                <p class="lang" key="title11">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quaerat dolores inventore vitae atque natus quam iste. </p>
-                <a href="./pdf/Melissa Orellana.pdf" class="btn lang" target="_blank" key="more"></a>
-            </div>
             
             <div class="servicesBx">
                 <img src="./img/icon3.png" alt="">
@@ -145,6 +138,12 @@
                 <p class="lang" key="title28">Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
 
+            <div class="workBx">
+                <img src="./img/ivs.jpeg" alt="">
+                <h2 class="lang" key="vstHeader">header</h2>
+                <p class="lang" key="uvsText">header
+            </div>
+
         </div>
 
     </section>
@@ -160,7 +159,7 @@
 
                 <div class="carousel__container">
                     <button aria-label="Previus" class="carousel__previus">
-                        <i class='fas fa-chevron-left fa-3x' ></i>
+                        <i class='fas fa-chevron-left fa-3x'></i>
                     </button>
                     <div class="carousel__list">
 
@@ -169,25 +168,21 @@
                                 <div class="card__container">
                                     <div class="header">
                                         <!-- IMAGEN Y NOMBRE DE LA PERSONA -->
-                                        <span> <img src="./assets/img/Arguera.jpg" /></span>
+                                        <!-- <span> <img src="./assets/img/Arguera.jpg" /></span> -->
                                         <h3>Roberto Arguera</h3>
 
                                     </div>
                                     <div class="description">
-                                        <p>
+                                        <p class="lang" key="testimonio1">
                                             <!-- DESCRIPCION (AQUI PONDRAS EL TESTIMONIO EN EL ARCHIVO JSON DONDE
                                                 ESTAN LAS COSAS DE LOS IDIOMAS Y SOLO AGREGAS LA COSA CON LOS NOMOBRES
                                                  DE LOS QUE TE DIERON EL TESTIMONIO <3) -->
-                                            <box-icon name='right-arrow' size="1rem"></box-icon>
-                                            <span class="lang" key="roberto">
-
-                                            </span>
                                         </p>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="carousel__item">
+                        <!-- <div class="carousel__item">
                             <div class="containeer">
                                 <div class="card__container">
 
@@ -278,7 +273,7 @@
 
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
 
                     <button aria-label="Next" class="carousel__next">
